--- a/11_12_WCFChatClient/App.config
+++ b/11_12_WCFChatClient/App.config
@@ -15,7 +15,7 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://119.203.7.251:8000/Chating" binding="netTcpBinding"
+            <endpoint address="net.tcp://localhost:8000/Chating" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IChat" contract="ServiceReference1.IChat"
                 name="NetTcpBinding_IChat" />
         </client>
